--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,4 +8,4 @@
   <% end %>
 </ul>
 
-<%= link_to "Create a New Article", article_path(new_article_path), class: "new_article" %>
+<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
